argo/apps/Netify/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: decap-cms
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: decap-cms
  template:
    metadata:
      labels:
        app: decap-cms
    spec:
      containers:
        - name: decap-cms
          image: itsmejoeeey/docker-decap-cms-standalone:latest
          ports:
           - containerPort: 80
