argo/apps/Netify/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: decap-cms
  namespace: web
spec:
  selector:
    app: decap-cms
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
