argo/apps/Netify/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: decap-cms
  namespace: web
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: cms.smeyer.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: decap-cms
                port:
                  number: 80
